--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>Week 4: Functions</title>
   </head>
 
-  <body>
+  <body onload="displayPizza()">
 
     <div class="topPizzas">
       <h3>Pizzas of the Month!</h3>
@@ -150,7 +150,7 @@
 
       </div>
       <div class="button-con">
-        <button class="btn btn-primary" type="button">Proceed to Checkout!</button>    
+        <button class="btn btn-primary" type="button" onclick="checkOut()">Proceed to Checkout!</button>    
       </div>
 
     </div>
